Edited env.example, uncommented line 16 inside DatabaseSeeder.php, made a production build for the frontend files. Added a /test route inside web.php.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=4cdfad637e1b506a7d01",
+    "/css/app.css": "/css/app.css?id=291a7434b40370505d6e"
 }
